@startuml
abstract class AbstractAircraft {
# int hp
- int maxHp
- int shootNum
- int direction
- int power
+ <<Create>> AbstractAircraft(int,int,int,int,int)
+ int getShootNum()
+ void setShootNum(int)
+ int getDirection()
+ void setDirection(int)
+ int getPower()
+ void setPower(int)
+ int getMaxHp()
+ void setMaxHp(int)
+ void decreaseHp(int)
+ void increaseHp(int)
+ int getHp()
+ void setHp(int)
+ {abstract}List<BaseBullet> shoot()
}
class HeroAircraft {
+ {static} int SCATTERING_SHOOTNUM
+ {static} int BOSS_APPEAR_SCORE
+ {static} int HERO_MAX_HP
- {static} HeroAircraft heroAircraft
- int shootNum
- int bulletPropStage
- int bloodPropStage
- int power
- boolean bulletValid
- boolean shieldValid
- boolean bulletSpeedUp
- <<Create>> HeroAircraft(int,int,int,int,int)
+ {static} HeroAircraft getHeroAircraft()
+ {static} void setHeroAircraft(HeroAircraft)
+ void initialize()
+ void forward()
+ List<BaseBullet> shoot()
+ int getShootNum()
+ void setShootNum(int)
+ int getPower()
+ void setPower(int)
+ boolean isBulletValid()
+ void setBulletValid(boolean)
+ boolean isShieldValid()
+ void setShieldValid(boolean)
+ boolean isBulletSpeedUp()
+ void setBulletSpeedUp(boolean)
+ int getBulletPropStage()
+ void setBulletPropStage(int)
+ int getBloodPropStage()
+ void setBloodPropStage(int)
}
abstract class AbstractFlyingObject {
# int locationX
# int locationY
# int speedX
# int speedY
# BufferedImage image
# int width
# int height
# boolean isValid
- int score
+ <<Create>> AbstractFlyingObject()
+ <<Create>> AbstractFlyingObject(int,int,int,int)
+ boolean isValid()
+ void setValid(boolean)
+ int getSpeedX()
+ int setSpeedX(int)
+ void forward()
+ boolean crash(AbstractFlyingObject)
+ int getLocationX()
+ void setLocationX(int)
+ int getLocationY()
+ void setLocationY(int)
+ void setLocation(double,double)
+ int getSpeedY()
+ void setSpeedY(int)
+ BufferedImage getImage()
+ void setImage(BufferedImage)
+ int getWidth()
+ void setWidth(int)
+ int getHeight()
+ void setHeight(int)
+ boolean notValid()
+ void vanish()
+ void explode()
+ int getScore()
}


AbstractFlyingObject <|-- AbstractAircraft
AbstractAircraft <|-- HeroAircraft
@enduml